--- a/control_flow.html
+++ b/control_flow.html
@@ -6,6 +6,26 @@
     <title>Control Flow</title>
 </head>
 <body>
+    <!-- <p id="functiondata1"></p>
+    <script>
+        function add() {
+            const a = 3;
+            const b = 10;
+            return a + b;
+        }
+        document.getElementById("functiondata1").innerHTML = add();
+    </script> -->
+    <p id="functiondata1"></p>
+    <script>
+        function add(a, b) {
+            return a + b;
+        }
+        document.getElementById("functiondata1").innerHTML = add(3, 10);
+        </script>
+
+        
+
+
         <h1>Control Flow and Conditional Statements</h1>
     <script src="./control_flow.js"></script>
     
