--- a/groceryTracker.html
+++ b/groceryTracker.html
@@ -6,7 +6,7 @@
     <title>Grocery Tracker</title>
 </head>
 <body>
-    <h1>Rectangle Area Calculator</h1>
+    <h1>Grocery Tracker</h1>
     <label for="amount1">Enter the length: </label>
     <input type="number" id="amount1"><br><br>
   
@@ -16,7 +16,7 @@
     <label for="amount3">Enter the width: </label>
     <input type="number" id="amount3"><br><br>
   
-    <button onclick="Total()">Calculate Area</button><br><br>
+    <button onclick="Total()">Calculate Total</button><br><br>
   
     <p id="result"></p>
   <script src="groceryTracker.js"></script>
