--- a/followercount.html
+++ b/followercount.html
@@ -11,5 +11,7 @@
   <h2>Click one button to follow</h2>
   <button onclick="increaseCount()">Follow</button>
   <script src="followercount.js"></script>
+  <button onclick="resetCount()">Reset</button>
+  <script src="followercount.js"></script>
 </body>
 </html>
