committing, like totally am

--- a/Week2/theater.html
+++ b/Week2/theater.html
@@ -1,10 +1,12 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
 <head>
-    <link rel="stylesheet" href="lab1.css"> 
-  <title>Restaurant Menu</title>
+    <link rel="stylesheet" href="theater.css">
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Document</title>
 </head>
-<body>
+<body>   
     <div id="seating-chart" class="seating-chart">
         <div class="seat available" onclick="bookSEat(0, 0)">A1</div>
         <div class="seat available" onclick="bookSEat(0, 1)">A2</div>
@@ -13,22 +15,8 @@
         <div class="seat available" onclick="bookSEat(1, 1)">A5</div>
         <div class="seat available" onclick="bookSEat(1, 2)">A6</div>
     </div>
-  
 
 
 
- <h1>Restaurant Menu Iteration</h1>
-    <h2>Breakfast Menu</h2>
-    <div id="breakfastTotalItems"></div>
-    <div id="breakfastMenuItems"></div>
-
-    <h2>Main Course Menu</h2>
-    <div id="maincourseTotalItems"></div>
-    <div id="maincourseMenuItems"></div>
-
-    <h2>Dessert Menu</h2>
-    <div id="dessertTotalItems"></div>
-    <div id="dessertMenuItems"></div>
-    <script src="lab1.js"></script>
 </body>
 </html>
