committing the committments

--- a/Week2/lab3.html
+++ b/Week2/lab3.html
@@ -5,6 +5,10 @@
     <title>Book Management System</title>
 </head>
 <body>
+    <ul id="my-list">
+        <li>Item 1</li>
+        <li>Item 2</li>
+    </ul>
     <h1>Book Management System</h1>
     <label for="bookName">Book Name:</label><br>
     <input type="text" id="bookName"><br><br>
@@ -17,9 +21,10 @@
     <button onclick="addBook()">Add Book</button>
 
     <h2>books</h2>
+    <p id="highlights">This is highlighted text</p>
     <div id="books">
         <!-- books will be displayed here -->
     </div>
-    <script src="./book_system.js"></script>
+    <script src="lab3.js"></script>
 </body>
 </html>
