--- a/Wk3/Todo.html
+++ b/Wk3/Todo.html
@@ -14,6 +14,9 @@
 </ul>
 
 <button id="clearCompletedBtn">Clear Completed</button>
+<button id="clearAllBtn">Clear All</button>
+
+
 <script src="Todo.js"></script>
 </body>
 </html>
